<resources>
    <string name="app_name">HappySorvetes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Happy Sorvetes</string>
    <string name="nav_header_subtitle">happysorvetes@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Produtos</string>
    <string name="menu_slideshow">Carrinho</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Contato</string>
    <string name="menu_send">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
