<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_produtos"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_carrinho"
            android:icon="@drawable/ic_carrinho"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_contato"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_sobre"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
